--- a/web-developer.html
+++ b/web-developer.html
@@ -50,7 +50,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/NationalSoftwareManagement1/85553942-entry-level-web-developer'>National Software Management Entry level Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NationalSoftwareManagement1/85553942-entry-level-web-developer'>National Software Management Entry level Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -66,11 +66,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692237210-web-developer-e-commerce-marketing-m-w-d-'>Publicis Groupe Web Developer E-Commerce &amp; Marketing (m/w/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692237210-web-developer-e-commerce-marketing-m-w-d-'>Publicis Groupe Web Developer E-Commerce &amp; Marketing (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://flowtify.recruiterbox.com/jobs/fk036c2'>
+<h5><a href='http://flowtify.recruiterbox.com/jobs/fk036c2'>
     Junior React Web Developer (m/w/d) at Flowtify GmbH
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -135,7 +135,7 @@
 <p>3 days ago ... At AIcrowd, we're looking to grow our team with a Web Application Developer (
 Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/knakdigital/job/e1snr9qd6xrikcicznyxk7xhse/websitemanager'>Web Developer | Knak Digital</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/knakdigital/job/e1snr9qd6xrikcicznyxk7xhse/websitemanager'>Web Developer | Knak Digital</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -159,7 +159,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light">Toronto Richmond Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://scopicsoftware.recruiterbox.com/jobs/fk03mxe'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://scopicsoftware.recruiterbox.com/jobs/fk03mxe'>
     Remote Junior Web Developer at Scopic Software
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -199,7 +199,7 @@ published: 19.07.2019). Apply now or check the other available jobs.</p>
 <p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
 a full team of technology professionals to take projects from design specs to?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ox9xafw7'>WebMD Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ox9xafw7'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Full Stack Developer. Job ID 2019-1565. Technology New York, New York. Apply
 . Description. Medscape, a division of WebMD, develops and hosts physician?...</p>
@@ -262,7 +262,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://flextrade.recruitee.com/o/web-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://flextrade.recruitee.com/o/web-developer'>
       Web Developer - FlexTrade
     </a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
@@ -280,7 +280,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/stars-group/job/oG9yafwh'>The Stars Group Careers - Junior Front End Web Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/stars-group/job/oG9yafwh'>The Stars Group Careers - Junior Front End Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The role: Junior Front End Web Developer. We are looking for a Junior Front End 
 Web Developer to join our busy and dynamic team based in our Dublin service?...</p>
@@ -289,7 +289,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692042525-web-developer-with-nodejs'>Prospect Infosys Inc. Web Developer with NodeJS | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692042525-web-developer-with-nodejs'>Prospect Infosys Inc. Web Developer with NodeJS | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -305,7 +305,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999691264174-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999691264174-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -427,7 +427,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://inovabusiness.recruitee.com/o/full-stack-web-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://inovabusiness.recruitee.com/o/full-stack-web-developer'>
       Full Stack Web Developer - INOVA+
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
